--- a/src/index.css
+++ b/src/index.css
@@ -57,14 +57,15 @@ input {
   gap: 1rem;
   margin-bottom: 0.2rem;
   justify-content: space-around;
-  width: 100%;
+  width: 90%;
   margin-inline: auto;
-  height: 2rem;
+  height: 3rem;
   align-items: center;
 }
 
 input {
   text-align: center;
+  width: 3rem;
 }
 
 .scheine {
