--- a/src/index.css
+++ b/src/index.css
@@ -58,10 +58,11 @@ input {
   gap: 1rem;
   margin-bottom: 0.2rem;
   justify-content: space-around;
-  width: 90%;
+  width: 100%;
   margin-inline: auto;
   height: 3rem;
   align-items: center;
+  padding-left: 1rem;
 }
 
 input {
