--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ footer {
   color: #fff;
   height: 2rem;
   text-align: center;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   margin-top: 11rem;
   gap: 2rem;
 }
