--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ header {
 
 img {
     margin-right: 1rem;
+    width: 12rem;
 }
 
 .header {
@@ -39,7 +40,7 @@ footer {
     color: #fff;
     height: 2rem;
     text-align: center;
-    padding: 0.5rem 1rem;
+    padding: 0.7rem 1rem;
     margin-top: 11rem;
     gap: 2rem;
 }
